--- a/vercel.json
+++ b/vercel.json
@@ -4,14 +4,14 @@
 	"installCommand": "corepack enable && pnpm install",
 	"builds": [
 		{
-			"src": "dist/vercel-server.js",
+			"src": "dist/server.js",
 			"use": "@vercel/node"
 		}
 	],
 	"routes": [
 		{
 			"src": "/(.*)",
-			"dest": "dist/vercel-server.js"
+			"dest": "dist/server.js"
 		}
 	],
 	"outputDirectory": "dist"
