refactor: migrate project to ES modules
- Updated main entry point in package.json to use .mjs extension.
- Changed build output format in tsup.config.ts from CommonJS to ESM.
- Adjusted TypeScript configuration to enable verbatim module syntax.
- Modified Vercel configuration to point to the new .mjs server file.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
 		"typeRoots": ["./node_modules/@types", "types"],
 		"sourceMap": true,
 		"preserveValueImports": false,
-		"verbatimModuleSyntax": false
+		"verbatimModuleSyntax": true
 	},
 	"include": ["**/*.ts", "types/express", "build.js"],
 	"exclude": ["node_modules"]
